wordpress/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-db
  namespace: wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress-db
  template:
    metadata:
      labels:
        app: wordpress-db
    spec:
      containers:
        - name: mariadb
          image: mariadb:11.1
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: db-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: db-storage
          persistentVolumeClaim:
            claimName: wordpress-db-pvc
