wordpress/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  namespace: wordpress
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
        - name: wordpress
          image: wordpress:6.6-php8.2-apache
          ports:
            - containerPort: 80
          volumeMounts:
            - name: wp-storage
              mountPath: /var/www/html
      volumes:
        - name: wp-storage
          persistentVolumeClaim:
            claimName: wordpress-pvc
