wordpress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: wordpress
spec:
  type: ClusterIP
  selector:
    app: wordpress
  ports:
    - port: 80
      targetPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: wordpress-db
  namespace: wordpress
spec:
  type: ClusterIP
  selector:
    app: wordpress-db
  ports:
    - port: 3306
      targetPort: 3306
